# school-timer-mac-tray

./: README.md  pyproject.toml  school_timer.spec  tray.py
outbuild/school_timer/: Analysis-00.toc  COLLECT-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.toc  warn-school_timer.txt  xref-school_timer.html
outdist/SchoolTimer.app/Contents/_CodeSignature/: CodeResources
release-onefile/dmg-root/SchoolTimer.app/Contents/: Info.plist
release/SchoolTimerRelease.app/Contents/_CodeSignature/: CodeResources
release/pkg-expanded/: Bom  PackageInfo
release/pkg-expanded2/: Bom  PackageInfo
release/stage/schooltimer.app/Contents/: Info.plist
scripts/: build-mac.sh  install-schooltimer.sh
